package org.example.pattern.adapter.boat;

/**
 * @author: zyh
 * @date: 2022/12/19
 */
public interface RowingBoat {

    void row();

}
